...

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/submitButton"
        android:layout_alignStart="@+id/submitButton"
        android:src="@drawable/madlibs"
        android:scaleType="centerCrop" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/nounOne"
        android:layout_marginTop="90dp"
        android:hint="Noun"
        android:textColor="#000000"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@android:color/white" />
...
